@@ -1,4 +1,7 @@
 2012-09-13 Aurelien GRAYO <aurelien@in-cite.net>
+	* Feature: Added field label.
+
+2012-09-13 Aurelien GRAYO <aurelien@in-cite.net>
 	* Feature: Wrapped sorts into span tag and associated sorts label.
 
 2012-06-21 Aurelien GRAYO <aurelien@in-cite.net>
